@@ -19,7 +19,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="../../include;../../libs;&quot;../../../STLPort-4.6/stlport&quot;;&quot;../../../libxml2-2.6/include&quot;;&quot;../../../gtk2-2.4/include/glib-2.0&quot;;&quot;../../../gtk2-2.4/lib/glib-2.0/include&quot;"
+				AdditionalIncludeDirectories="../../include;../../libs;&quot;../../../STLPort-4.6/stlport&quot;;&quot;../../../libxml2-2.6/include&quot;;&quot;../../../iconv-1.9/include&quot;;&quot;../../../gtk2-2.4/include/glib-2.0&quot;;&quot;../../../gtk2-2.4/lib/glib-2.0/include&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;MAPXML_EXPORTS"
 				StringPooling="TRUE"
 				MinimalRebuild="TRUE"
@@ -42,7 +42,7 @@
 				OutputFile="$(OutDir)/mapxml.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="TRUE"
-				AdditionalLibraryDirectories="&quot;../../../libxml2-2.6/win32/lib&quot;;&quot;../../../gtk2-2.4/lib&quot;"
+				AdditionalLibraryDirectories="&quot;../../../libxml2-2.6/lib&quot;;&quot;../../../gtk2-2.4/lib&quot;"
 				IgnoreDefaultLibraryNames="msvcprtd.lib"
 				ModuleDefinitionFile="$(ProjectName).def"
 				GenerateDebugInformation="TRUE"
@@ -88,7 +88,7 @@ copy &quot;$(TargetDir)$(TargetName).pdb&quot; &quot;$(SolutionDir)install\modul
 				EnableIntrinsicFunctions="TRUE"
 				FavorSizeOrSpeed="1"
 				OptimizeForWindowsApplication="FALSE"
-				AdditionalIncludeDirectories="../../include;../../libs;&quot;../../../STLPort-4.6/stlport&quot;;&quot;../../../libxml2-2.6/include&quot;;&quot;../../../gtk2-2.4/include/glib-2.0&quot;;&quot;../../../gtk2-2.4/lib/glib-2.0/include&quot;"
+				AdditionalIncludeDirectories="../../include;../../libs;&quot;../../../STLPort-4.6/stlport&quot;;&quot;../../../libxml2-2.6/include&quot;;&quot;../../../iconv-1.9/include&quot;;&quot;../../../gtk2-2.4/include/glib-2.0&quot;;&quot;../../../gtk2-2.4/lib/glib-2.0/include&quot;"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;MAPXML_EXPORTS"
 				StringPooling="TRUE"
 				ExceptionHandling="FALSE"
@@ -108,7 +108,7 @@ copy &quot;$(TargetDir)$(TargetName).pdb&quot; &quot;$(SolutionDir)install\modul
 				OutputFile="$(OutDir)/mapxml.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="TRUE"
-				AdditionalLibraryDirectories="&quot;../../../libxml2-2.6/win32/lib&quot;;&quot;../../../gtk2-2.4/lib&quot;"
+				AdditionalLibraryDirectories="&quot;../../../libxml2-2.6/lib&quot;;&quot;../../../gtk2-2.4/lib&quot;"
 				IgnoreDefaultLibraryNames="msvcprt.lib"
 				ModuleDefinitionFile="$(ProjectName).def"
 				GenerateDebugInformation="TRUE"
