@@ -20,7 +20,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="../include;../libs;&quot;../../STLPort-4.6/stlport&quot;;&quot;../../libxml2-2.6/include&quot;;&quot;../../gtk2-2.4/lib/glib-2.0/include&quot;;&quot;../../gtk2-2.4/include/glib-2.0&quot;;&quot;../../gtk2-2.4/lib/gtk-2.0/include&quot;;&quot;../../gtk2-2.4/include/gtk-2.0&quot;;&quot;../../gtk2-2.4/include/gtk-2.0/gdk&quot;;&quot;../../gtk2-2.4/include/pango-1.0&quot;;&quot;../../gtk2-2.4/include/atk-1.0&quot;;&quot;../../gtk2-2.4/lib/gtkglext-1.0/include&quot;;&quot;../../gtk2-2.4/include/gtkglext-1.0&quot;"
+				AdditionalIncludeDirectories="../include;../libs;&quot;../../STLPort-4.6/stlport&quot;;&quot;../../libxml2-2.6/include&quot;;&quot;../../iconv-1.9/include&quot;;&quot;../../gtk2-2.4/lib/glib-2.0/include&quot;;&quot;../../gtk2-2.4/include/glib-2.0&quot;;&quot;../../gtk2-2.4/lib/gtk-2.0/include&quot;;&quot;../../gtk2-2.4/include/gtk-2.0&quot;;&quot;../../gtk2-2.4/include/gtk-2.0/gdk&quot;;&quot;../../gtk2-2.4/include/pango-1.0&quot;;&quot;../../gtk2-2.4/include/atk-1.0&quot;;&quot;../../gtk2-2.4/lib/gtkglext-1.0/include&quot;;&quot;../../gtk2-2.4/include/gtkglext-1.0&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE"
 				StringPooling="TRUE"
 				MinimalRebuild="TRUE"
@@ -43,7 +43,7 @@
 				OutputFile="$(OutDir)/$(ProjectName).exe"
 				LinkIncremental="1"
 				SuppressStartupBanner="TRUE"
-				AdditionalLibraryDirectories="&quot;../../gtk2-2.4/lib&quot;;&quot;../../libxml2-2.6/win32/lib&quot;;&quot;../libs/profile/debug/&quot;"
+				AdditionalLibraryDirectories="&quot;../../gtk2-2.4/lib&quot;;&quot;../../libxml2-2.6/lib&quot;;&quot;../libs/profile/debug/&quot;"
 				IgnoreAllDefaultLibraries="TRUE"
 				IgnoreDefaultLibraryNames="msvcprtd.lib"
 				GenerateDebugInformation="TRUE"
@@ -94,7 +94,7 @@ copy &quot;$(TargetDir)$(TargetName).pdb&quot;  &quot;$(SolutionDir)install&quot
 				EnableIntrinsicFunctions="TRUE"
 				FavorSizeOrSpeed="1"
 				OptimizeForWindowsApplication="TRUE"
-				AdditionalIncludeDirectories="../include;../libs;&quot;../../STLPort-4.6/stlport&quot;;&quot;../../libxml2-2.6/include&quot;;&quot;../../gtk2-2.4/lib/glib-2.0/include&quot;;&quot;../../gtk2-2.4/include/glib-2.0&quot;;&quot;../../gtk2-2.4/lib/gtk-2.0/include&quot;;&quot;../../gtk2-2.4/include/gtk-2.0&quot;;&quot;../../gtk2-2.4/include/gtk-2.0/gdk&quot;;&quot;../../gtk2-2.4/include/pango-1.0&quot;;&quot;../../gtk2-2.4/include/atk-1.0&quot;;&quot;../../gtk2-2.4/lib/gtkglext-1.0/include&quot;;&quot;../../gtk2-2.4/include/gtkglext-1.0&quot;"
+				AdditionalIncludeDirectories="../include;../libs;&quot;../../STLPort-4.6/stlport&quot;;&quot;../../libxml2-2.6/include&quot;;&quot;../../iconv-1.9/include&quot;;&quot;../../gtk2-2.4/lib/glib-2.0/include&quot;;&quot;../../gtk2-2.4/include/glib-2.0&quot;;&quot;../../gtk2-2.4/lib/gtk-2.0/include&quot;;&quot;../../gtk2-2.4/include/gtk-2.0&quot;;&quot;../../gtk2-2.4/include/gtk-2.0/gdk&quot;;&quot;../../gtk2-2.4/include/pango-1.0&quot;;&quot;../../gtk2-2.4/include/atk-1.0&quot;;&quot;../../gtk2-2.4/lib/gtkglext-1.0/include&quot;;&quot;../../gtk2-2.4/include/gtkglext-1.0&quot;"
 				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE"
 				StringPooling="TRUE"
 				ExceptionHandling="FALSE"
@@ -114,7 +114,7 @@ copy &quot;$(TargetDir)$(TargetName).pdb&quot;  &quot;$(SolutionDir)install&quot
 				OutputFile="$(OutDir)/$(ProjectName).exe"
 				LinkIncremental="1"
 				SuppressStartupBanner="TRUE"
-				AdditionalLibraryDirectories="&quot;../../gtk2-2.4/lib&quot;;&quot;../../libxml2-2.6/win32/lib&quot;;&quot;../libs/profile/release/&quot;"
+				AdditionalLibraryDirectories="&quot;../../gtk2-2.4/lib&quot;;&quot;../../libxml2-2.6/lib&quot;;&quot;../libs/profile/release/&quot;"
 				IgnoreAllDefaultLibraries="TRUE"
 				IgnoreDefaultLibraryNames="msvcprt.lib"
 				GenerateDebugInformation="TRUE"
