@@ -21,7 +21,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\..\..\include;..\common;..\..\..\libs;&quot;..\..\..\..\libxml2-2.6\include&quot;"
+				AdditionalIncludeDirectories="..\..\..\include;..\common;..\..\..\libs;&quot;..\..\..\..\libxml2-2.6\include&quot;;&quot;..\..\..\..\iconv-1.9\include&quot;"
 				PreprocessorDefinitions="_DEBUG,WIN32,_CONSOLE"
 				ExceptionHandling="FALSE"
 				BasicRuntimeChecks="0"
@@ -45,7 +45,7 @@
 				OutputFile=".\Debug/q2map.exe"
 				LinkIncremental="2"
 				SuppressStartupBanner="TRUE"
-				AdditionalLibraryDirectories="&quot;..\..\..\..\libxml2-2.6\win32\lib&quot;"
+				AdditionalLibraryDirectories="&quot;..\..\..\..\libxml2-2.6\lib&quot;"
 				IgnoreDefaultLibraryNames="libcd"
 				GenerateDebugInformation="TRUE"
 				ProgramDatabaseFile=".\Debug/q2map.pdb"
@@ -96,7 +96,7 @@
 				FavorSizeOrSpeed="1"
 				OptimizeForProcessor="2"
 				OptimizeForWindowsApplication="TRUE"
-				AdditionalIncludeDirectories="..\..\..\include;..\common;..\..\..\libs;&quot;..\..\..\..\libxml2-2.6\include&quot;"
+				AdditionalIncludeDirectories="..\..\..\include;..\common;..\..\..\libs;&quot;..\..\..\..\libxml2-2.6\include&quot;;&quot;..\..\..\..\iconv-1.9\include&quot;"
 				PreprocessorDefinitions="NDEBUG,WIN32,_CONSOLE"
 				StringPooling="TRUE"
 				ExceptionHandling="FALSE"
@@ -122,7 +122,7 @@
 				OutputFile=".\Release/q2map.exe"
 				LinkIncremental="1"
 				SuppressStartupBanner="TRUE"
-				AdditionalLibraryDirectories="&quot;..\..\..\..\libxml2-2.6\win32\lib&quot;"
+				AdditionalLibraryDirectories="&quot;..\..\..\..\libxml2-2.6\lib&quot;"
 				ProgramDatabaseFile=".\Release/q2map.pdb"
 				GenerateMapFile="TRUE"
 				MapFileName=".\Release/q2map.map"
