@@ -43,7 +43,7 @@
 				OutputFile=".\Debug/qdata3.exe"
 				LinkIncremental="2"
 				SuppressStartupBanner="TRUE"
-				AdditionalLibraryDirectories="..\..\..\libs\mathlib\Debug;..\..\..\libs\l_net\Debug;&quot;..\..\..\..\libxml2\win32\binaries-debug&quot;"
+				AdditionalLibraryDirectories="..\..\..\libs\mathlib\Debug;..\..\..\libs\l_net\Debug;&quot;..\..\..\..\libxml2-2.6\lib&quot;"
 				GenerateDebugInformation="TRUE"
 				ProgramDatabaseFile=".\Debug/qdata3.pdb"
 				GenerateMapFile="TRUE"
@@ -101,7 +101,7 @@
 				OutputFile=".\Release/qdata3.exe"
 				LinkIncremental="1"
 				SuppressStartupBanner="TRUE"
-				AdditionalLibraryDirectories="..\..\..\libs\mathlib\Release;..\..\..\libs\l_net\Release;&quot;..\..\..\..\libxml2\win32\binaries-release&quot;"
+				AdditionalLibraryDirectories="..\..\..\libs\mathlib\Release;..\..\..\libs\l_net\Release;&quot;..\..\..\..\libxml2-2.6\lib&quot;"
 				ProgramDatabaseFile=".\Release/qdata3.pdb"
 				GenerateMapFile="TRUE"
 				MapFileName=".\Release/qdata3.map"
