@@ -40,7 +40,7 @@
 				OutputFile=".\Debug/q3data.exe"
 				LinkIncremental="2"
 				SuppressStartupBanner="TRUE"
-				AdditionalLibraryDirectories="&quot;..\..\..\..\libxml2\win32\binaries-debug&quot;;..\..\..\libs\l_net\Debug;..\..\..\libs\pak\Debug;&quot;..\..\..\..\gtk2-win32\lib\&quot;"
+				AdditionalLibraryDirectories="&quot;..\..\..\..\libxml2-2.6\lib&quot;;..\..\..\libs\l_net\Debug;..\..\..\libs\pak\Debug;&quot;..\..\..\..\gtk2-win32\lib\&quot;"
 				GenerateDebugInformation="TRUE"
 				ProgramDatabaseFile=".\Debug/q3data.pdb"
 				SubSystem="1"
@@ -95,7 +95,7 @@
 				OutputFile=".\Release/q3data.exe"
 				LinkIncremental="1"
 				SuppressStartupBanner="TRUE"
-				AdditionalLibraryDirectories="..\..\..\libs\pak\release;..\..\..\libs\l_net\release;&quot;..\..\..\..\libxml2\win32\binaries-release&quot;;&quot;..\..\..\..\gtk2-win32\lib\&quot;"
+				AdditionalLibraryDirectories="..\..\..\libs\pak\release;..\..\..\libs\l_net\release;&quot;..\..\..\..\libxml2-2.6\lib&quot;;&quot;..\..\..\..\gtk2-win32\lib\&quot;"
 				GenerateDebugInformation="TRUE"
 				ProgramDatabaseFile=".\Release/q3data.pdb"
 				SubSystem="1"
